--- a/clicker/index4.html
+++ b/clicker/index4.html
@@ -9,7 +9,7 @@
   <script type="text/babel">
     const root = document.getElementById("root");
     function App() {
-      const [counter, setCounter] = React.useState(0);
+      const [counter, setCounter] = React.useState();
       const onClick = () => {
         //setCounter(counter + 1);
         setCounter((current) => current + 1);
